--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: IntEREst
 Title: Intron-Exon Retention Estimator
-Version: 1.27.0
-Date: 2022-05-11
+Version: 1.27.1
+Date: 2024-03-19
 Author: Ali Oghabian <Ali.Oghabian@Helsinki.Fi>, Dario Greco
         <dario.greco@helsinki.fi>, Mikko Frilander
         <Mikko.Frilander@helsinki.fi>
@@ -11,7 +11,7 @@ Description: This package performs Intron-Exon Retention analysis on
         RNA-seq data (.bam files).
 Depends: R (>= 3.5.0), GenomicRanges, Rsamtools, SummarizedExperiment,
         edgeR, S4Vectors, GenomicFiles
-Imports: seqLogo, Biostrings, GenomicFeatures (>= 1.39.4), IRanges, seqinr,
+Imports: seqLogo, Biostrings, GenomicFeatures, txdbmaker, IRanges, seqinr,
         graphics, grDevices, stats, utils, grid, methods, DBI, RMySQL,
         GenomicAlignments, BiocParallel, BiocGenerics, DEXSeq, DESeq2
 Suggests: clinfun, knitr, rmarkdown, BSgenome.Hsapiens.UCSC.hg19
