Adding back txdbmaker dependency and updating the Maintainers' info

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,18 @@
 Package: IntEREst
 Title: Intron-Exon Retention Estimator
-Version: 1.29.1
+Version: 1.29.2
 Date: 2024-03-19
 Author: Ali Oghabian <Ali.Oghabian@Helsinki.Fi>, Dario Greco
         <dario.greco@helsinki.fi>, Mikko Frilander
         <Mikko.Frilander@helsinki.fi>
-Maintainer: Ali Oghabian <Ali.Oghabian@Helsinki.Fi>, Mikko Frilander
-        <Mikko.Frilander@helsinki.fi>
+Maintainer: Ali Oghabian <Ali.Oghabian@Helsinki.Fi>
 Description: This package performs Intron-Exon Retention analysis on
         RNA-seq data (.bam files).
 Depends: R (>= 3.5.0), GenomicRanges, Rsamtools, SummarizedExperiment,
         edgeR, S4Vectors, GenomicFiles
-Imports: seqLogo, Biostrings, GenomicFeatures (>= 1.39.4), IRanges, seqinr,
-        graphics, grDevices, stats, utils, grid, methods, DBI, RMariaDB,
-        GenomicAlignments, BiocParallel, BiocGenerics, DEXSeq, DESeq2
+Imports: seqLogo, Biostrings, GenomicFeatures (>= 1.39.4), txdbmaker, IRanges,
+        seqinr, graphics, grDevices, stats, utils, grid, methods, DBI,
+        RMariaDB, GenomicAlignments, BiocParallel, BiocGenerics, DEXSeq, DESeq2
 Suggests: clinfun, knitr, rmarkdown, BSgenome.Hsapiens.UCSC.hg19
 VignetteBuilder: knitr
 LazyData: true
